--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Mon Porte-Folio en ligne</title>
+  <title>CV - ANDRE Léopold</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-
-</header>
+    <header class="site-header" id="home">
+        <nav class="nav">
+            <a class="brand" href="#home">Léopold ANDRE</a>
+            <ul class="nav-list" aria-label="Navigation principale">
+                <li><a href="#about">À propos</a></li>
+                <li><a href="#projects">Projets</a></li>
+                <li><a href="#skills">Compétences</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
 </body>
