--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <section id="accueil" class="hero">
 
-    <video autoplay myted loop id="bg-video">
-      <source src="video\index_background.mp4" type="video\mp4">
+    <video autoplay muted loop id="bg-video">
+      <source src="video/index_background.mp4" type="video/mp4">
       Votre navigateur ne supporte pas la video HTML5.
     </video>
 
