--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio – Prénom Nom</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -22,7 +24,7 @@
   <section id="accueil" class="hero">
 
     <video autoplay muted loop id="bg-video">
-      <source src="video/index_background.mp4" type="video/mp4">
+      <source src="video/3611036-hd_1920_1080_24fps.mp4" type="video/mp4">
       Votre navigateur ne supporte pas la video HTML5.
     </video>
 
