ajout section presentation et photo test

--- a/index.html
+++ b/index.html
@@ -31,10 +31,28 @@
     <div class="overlay"></div>
     <div class="hero-content">
       <h2 class="title">ANDRE Léopold</h2>
-      <p>Actuellement étudiant mon cul faudra changer</p>
-      <p>Je recherche un stage pitié prenez moi</p>
+      <p></p>
+      <p></p>
     </div>
   </section>
+
+  <section id="presentation" class="poster">
+  <div class="poster-content">
+    <div class="poster-text">
+      <h2>QUI SUIS-JE ?</h2>
+      <p class="subtitle">Léopold, étudiant en ingénierie et passionné de musique.</p>
+      <p class="description">
+        Passionné par le design interactif et les interfaces futuristes, 
+        je cherche à créer des expériences immersives qui questionnent 
+        la frontière entre le réel et le virtuel.
+      </p>
+    </div>
+
+    <div class="poster-image">
+      <img src="images/selfie_index.jpeg" alt="photo_cv">
+    </div>
+  </div>
+</section>
 
   <footer>
     <p>© ANDRE Léopold — Portfolio personnel</p>
