ajout competences et projets

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio – Prénom Nom</title>
+  <title>Portfolio – ANDRE Léopold</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -11,15 +11,21 @@
 </head>
 
 <body>
+
+  <!-- HEADER -->
+
   <header>
     <h1>ANDRE Léopold - Etudiant en ingénierie</h1>
     <nav>
       <a href="#accueil">Accueil</a>
       <a href="#apropos">A propos</a>
+      <a href="#competences">Compétences</a>
       <a href="#projets">Projets</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
+
+  <!-- ACCUEIL -->
 
   <section id="accueil" class="hero">
 
@@ -31,28 +37,104 @@
     <div class="overlay"></div>
     <div class="hero-content">
       <h2 class="title">ANDRE Léopold</h2>
-      <p></p>
-      <p></p>
     </div>
   </section>
 
-  <section id="presentation" class="poster">
-  <div class="poster-content">
-    <div class="poster-text">
+  <!-- A PROPOS -->
+
+  <section id="apropos" class="poster">
+  <section class="poster-content">
+    <section class="poster-text">
       <h2>QUI SUIS-JE ?</h2>
       <p class="subtitle">Léopold, étudiant en ingénierie et passionné de musique.</p>
       <p class="description">
-        Passionné par le design interactif et les interfaces futuristes, 
-        je cherche à créer des expériences immersives qui questionnent 
-        la frontière entre le réel et le virtuel.
+        Quod si rectum statuerimus vel concedere amicis, quidquid velint, vel impetrare ab iis, quidquid velimus, perfecta quidem sapientia si simus, nihil habeat res vitii; sed loquimur de iis amicis qui ante oculos sunt, quos vidimus aut de quibus memoriam accepimus, quos novit vita communis. Ex hoc numero nobis exempla sumenda sunt, et eorum quidem maxime qui ad sapientiam proxime accedunt.
       </p>
-    </div>
+    </section>
 
     <div class="poster-image">
       <img src="images/selfie_index.jpeg" alt="photo_cv">
     </div>
+  </section>
+  </section>
+
+  <!-- COMPETENCES -->
+
+  <section id="competences" class="competences">
+    <video autoplay muted loop id="bg-video_competences">
+      <source src="video/6041712-uhd_3840_2160_24fps.mp4" type="video/mp4">
+      Votre navigateur ne supporte pas la video HTML5.
+    </video>
+
+<div>
+  <h2>Compétences</h2>
+  <p class="subtitle">Mes domaines techniques et créatifs</p>
+
+  <div class="competences-grid">
+    <div class="competence-item">
+      <h3>Développement</h3>
+      <ul>
+        <li>HTML / CSS / JavaScript</li>
+        <li>Python / C / Arduino</li>
+        <li>React / Node.js</li>
+      </ul>
+    </div>
+
+    <div class="competence-item">
+      <h3>Ingénierie</h3>
+      <ul>
+        <li>Modélisation 3D (SolidWorks, Fusion 360)</li>
+        <li>Électronique embarquée</li>
+        <li>Capteurs et IoT</li>
+      </ul>
+    </div>
+
+    <div class="competence-item">
+      <h3>Création & Design</h3>
+      <ul>
+        <li>Musique assistée par ordinateur (Ableton)</li>
+        <li>Montage vidéo / audio</li>
+        <li>Design visuel</li>
+      </ul>
+    </div>
   </div>
 </section>
+
+<!-- PROJETS -->
+
+<section id="projets" class="projet">
+
+  <video autoplay muted loop id="bg-video_projet">
+      <source src="video/257447_small.mp4" type="video/mp4">
+      Votre navigateur ne supporte pas la video HTML5.
+    </video>
+    
+  <div class="projet-content">
+    <div class="projet1-text">
+      <h2>QUI SUIS-JE ?</h2>
+      <p class="projet-soustitre">Léopold, étudiant en ingénierie et passionné de musique.</p>
+      <p class="description">
+        Quod si rectum statuerimus vel concedere amicis, quidquid velint, vel impetrare ab iis, quidquid velimus, perfecta quidem sapientia si simus, nihil habeat res vitii; sed loquimur de iis amicis qui ante oculos sunt, quos vidimus aut de quibus memoriam accepimus, quos novit vita communis. Ex hoc numero nobis exempla sumenda sunt, et eorum quidem maxime qui ad sapientiam proxime accedunt.
+      </p>
+    </div>
+    <div class="projet2-text">
+      <h2>QUI SUIS-JE ?</h2>
+      <p class="projet-soustitre">Léopold, étudiant en ingénierie et passionné de musique.</p>
+      <p class="description">
+        Quod si rectum statuerimus vel concedere amicis, quidquid velint, vel impetrare ab iis, quidquid velimus, perfecta quidem sapientia si simus, nihil habeat res vitii; sed loquimur de iis amicis qui ante oculos sunt, quos vidimus aut de quibus memoriam accepimus, quos novit vita communis. Ex hoc numero nobis exempla sumenda sunt, et eorum quidem maxime qui ad sapientiam proxime accedunt.
+      </p>
+    </div>
+    <div class="projet3-text">
+      <h2>QUI SUIS-JE ?</h2>
+      <p class="projet-soustitre">Léopold, étudiant en ingénierie et passionné de musique.</p>
+      <p class="description">
+        Quod si rectum statuerimus vel concedere amicis, quidquid velint, vel impetrare ab iis, quidquid velimus, perfecta quidem sapientia si simus, nihil habeat res vitii; sed loquimur de iis amicis qui ante oculos sunt, quos vidimus aut de quibus memoriam accepimus, quos novit vita communis. Ex hoc numero nobis exempla sumenda sunt, et eorum quidem maxime qui ad sapientiam proxime accedunt.
+      </p>
+    </div>
+  </div>
+</section>
+
+  <!-- FOOTER -->
 
   <footer>
     <p>© ANDRE Léopold — Portfolio personnel</p>
