--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <!-- HEADER -->
+  <!-- ---------------------------- HEADER ---------------------------- -->
 
   <header>
     <h1>ANDRE Léopold - Etudiant en ingénierie</h1>
@@ -25,7 +25,7 @@
     </nav>
   </header>
 
-  <!-- ACCUEIL -->
+  <!-- ---------------------------- ACCUEIL ---------------------------- -->
 
   <section id="accueil" class="hero">
 
@@ -40,7 +40,7 @@
     </div>
   </section>
 
-  <!-- A PROPOS -->
+  <!-- ---------------------------- A PROPOS ---------------------------- -->
 
   <section id="apropos" class="poster">
   <section class="poster-content">
@@ -58,7 +58,7 @@
   </section>
   </section>
 
-  <!-- COMPETENCES -->
+  <!-- ---------------------------- COMPETENCES ---------------------------- -->
 
   <section id="competences" class="competences">
     <video autoplay muted loop id="bg-video_competences">
@@ -100,7 +100,7 @@
   </div>
 </section>
 
-<!-- PROJETS -->
+<!-- ---------------------------- PROJETS ---------------------------- -->
 
 <section id="projets" class="projet">
 
@@ -134,7 +134,7 @@
   </div>
 </section>
 
-  <!-- FOOTER -->
+  <!-- ---------------------------- FOOTER ---------------------------- -->
 
   <footer>
     <p>© ANDRE Léopold — Portfolio personnel</p>
